// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with matching query 1`] = `
<div
  className="projects-facet-sort"
>
  <span>
    projects.sort_list
  </span>
  <div
    className="spacer-left button-group"
  >
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "languages": "php,cpp",
            "sort": "foo",
          },
        }
      }
    >
      worst
    </Link>
    <Link
      className="button button-small button-grey button-active"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "languages": "php,cpp",
          },
        }
      }
    >
      best
    </Link>
  </div>
</div>
`;

exports[`should render correctly with no matching query 1`] = `
<div
  className="projects-facet-sort"
>
  <span>
    projects.sort_list
  </span>
  <div
    className="spacer-left button-group"
  >
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "-foo",
          },
        }
      }
    >
      worst
    </Link>
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "foo",
          },
        }
      }
    >
      best
    </Link>
  </div>
</div>
`;

exports[`should render with custom parameters 1`] = `
<div
  className="projects-facet-sort"
>
  <span>
    projects.sort_list
  </span>
  <div
    className="spacer-left button-group"
  >
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "foo",
          },
        }
      }
    >
      worst
    </Link>
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "-foo",
          },
        }
      }
    >
      best
    </Link>
  </div>
</div>
`;

exports[`should render with default parameters and empty query 1`] = `
<div
  className="projects-facet-sort"
>
  <span>
    projects.sort_list
  </span>
  <div
    className="spacer-left button-group"
  >
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "-foo",
          },
        }
      }
    >
      worst
    </Link>
    <Link
      className="button button-small button-grey"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "sort": "foo",
          },
        }
      }
    >
      best
    </Link>
  </div>
</div>
`;
